노드 수업 자료 백업

--- a/NODE/4_Mysql/회원관리/views/main.html
+++ b/NODE/4_Mysql/회원관리/views/main.html
@@ -11,5 +11,15 @@
     <a href="login">로그인</a> <br />
     <a href="update">회원정보 수정</a> <br />
     <a href="delete">회원정보 삭제</a> <br />
+
+    <!-- nick님 환영합니다~ 
+      조건) 닉네임이 있는 경우는 환영합니다!
+      없는 경우는 그냥 비우고 싶다! 
+    -->
+    {% if nick %}
+    <h1>{{nick}}님 환영합니다!</h1>
+    <br />
+    <a href="/user/logout">로그아웃</a>
+    {% endif %}
   </body>
 </html>
